# shmup_sdl

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp  test.sh
.circleci/: build.sh  config.yml  test.sh
assets/: CMakeLists.txt  game.xml  map1.tmx  tiles.tsx
cmake/: CodeCoverage.cmake
game/: Bullet.cpp  Bullet.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  MenuButton.cpp  MenuButton.h  MenuState.cpp  MenuState.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  ServiceLocator.cpp  ServiceLocator.h  TextureManager.cpp  TextureManager.h  game.cpp  game.h
game/base/: BulletHandler.cpp  BulletHandler.h  Camera.cpp  Camera.h  CollisionManager.cpp  CollisionManager.h  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  GameState.cpp  GameState.h  GameStateMachine.cpp  GameStateMachine.h  InputHandler.cpp  InputHandler.h  Layer.h  Level.cpp  Level.h  LevelParser.cpp  LevelParser.h  LoaderParams.h  Logger.h  MenuState.cpp  MenuState.h  ObjectFactory.cpp  ObjectFactory.h  ObjectLayer.cpp  ObjectLayer.h  PlayState.cpp  PlayState.h  ServiceLocator.cpp  ServiceLocator.h  StateParser.cpp  StateParser.h  StringUtils.h  TextureManager.h  TileLayer.cpp  TileLayer.h
game/base/layers/: BulletLayer.cpp  BulletLayer.h  ObjectLayer.cpp  ObjectLayer.h  TileLayer.cpp  TileLayer.h
game/sdl/: InputHandler.cpp  InputHandler.h  SDLGameObject.cpp  SDLGameObject.h  SDLInputHandler.cpp  SDLTextureManager.cpp  SDLTextureManager.h
game/utils/: Base64.h  Logger.h  Memory.h  StringUtils.h
res/: CMakeLists.txt
tests/: CMakeLists.txt
tests/assets/: CMakeLists.txt  map1.tmx  test.xml  tiles.tsx
tests/base_tests/: CMakeLists.txt  LevelParserTest.cpp  StateParserTest.cpp  TileLayerTest.cpp
tests/base_tests/mocks/: Mocks.h
tests/basic_tests/: CMakeLists.txt  basic_tests.cpp
tests/lib/: CMakeLists.txt
